--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,36 +1,83 @@
-<div class="container">
-    <div class="row" id="top">
-        <div class="col-12 text-center">
-            <h1>Eat Da Burger</h1>
-        </div>
-    </div>
-<br>
-    <div class="row">
-        <div class="col-3 text-center" id="enterSide">
-            <p>
-            {{#each burger_db}}
-                {{#unless devoured}}
-            </p>
-                
-        </div>
-        <div class="col-3 text-center">
-            <p>{{id}}, {{burger_name}}</p>
-        </div>
-        <div class="col-6 text-center" id="devourSide">
-            <form method="POST" action="/" class="button-size">
-            <input name="burger_id" type="text" value={{this.id}}>
-            <br>
-            <button type="submit" class="btn btn-default">DEVOUR</button>
-            </form>
-        </div>
-        {{/unless}}
-        {{/each}}
-    </div>
-    <div class="col-6">
-        {{#each burger_data}}
-            {{#if this.devoured}}
-                <input class="form-control" type="text" placeholder="{{id}}.{{burger_name}}">
-            {{/if}}
-        {{/each}}
-    </div>
+<div class=container>
+	<div class="row">
+		<div class="col-md-12">
+			<img src="../public/assets/img/burger.jpg" class="img-responsive center-block" id="burger-img" alt="Responsive image">
+		</div>
+	</div>
+
+	<div class="row">
+		<div class="col-md-12">
+			<h1 class="text-center" id="burger-h">Eat-Da-Burger!</h1>
+		</div>
+	</div>
+
+	<div class="row">
+		<div class="col-md-2">
+		</div>
+
+		<div class="col-md-5 uneaten-list">
+			{{#each burger}}
+				{{#unless this.devoured}}
+					<div class="row">
+						<div class="col-md-8">
+							<div class="panel panel-default">
+								<div class="burger-text panel-body">
+									{{this.id}}. {{this.burger_name}}
+								</div>
+							</div>
+						</div>
+
+						<div class="col-md-4">
+							<form action="/{{this.id}}?_method=PUT" method="POST">
+			          			<input type="hidden" name="devoured" value="true">
+			          			<button type="submit" class="burger-btn btn btn-success">Devour</button>
+			        		</form>
+					    </div>
+			        </div>
+			    {{/unless}}
+			{{/each}}
+		</div>
+
+		<div class="col-md-3 eaten-list">
+			{{#each burger}}
+				{{#if this.devoured}}
+					<div class="panel panel-default">
+						<div class="burger-text panel-body" id="devoured-text">
+							{{this.id}}. {{this.burger_name}}
+						</div>
+					</div>
+				{{/if}}
+			{{/each}}
+		</div>
+
+		<div class="col-md-2">
+		</div>
+	</div>
+
+	<div class="row">
+		<div class="col-md-3">
+		</div>
+
+		<div class="col-md-6">
+			<form class="create-update-form" action="/" method="POST">
+				<div class="form-group">
+			  		<label class="burger-text control-label" for="focusedInput">Your burger:</label>
+					<input class="burger-text form-control" id="focusedInput" type="text" placeholder="Burger order..." name="burger_name">
+				</div>
+				
+				<div class="form-group">
+			    	<button type="submit" class="burger-btn btn btn-warning center-block">Submit</button>
+		    	</div>
+		  	</form>
+		</div>
+
+		<div class="col-md-3">
+		</div>
+	</div>
+
+	<div class="row">
+		<div class="col-md-12">
+			<p class="burger-text text-center">Enter a burger, then click Submit.</p>
+		</div>
+	</div>
 </div>
